--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
   </head>
 
   <body>
+
     <%= yield %>
+
+    <div>
+      <%= link_to 'All Cocktails', cocktails_path %>
+    </div>
   </body>
 </html>
