--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,9 +5,16 @@
 
 <%= link_to 'Add an ingredient', new_cocktail_dose_path(@cocktail) %> |
 
-<%= link_to "Delete #{@dose}",
-dose_path(@dose),
+
+<% @cocktail.doses.each do |dose|%>
+ <%= dose.description %>
+ <%= dose.ingredient.name %>
+
+<%= link_to "Delete dose",
+dose_path(dose),
 method: :delete,
 data: { confirm: "Are you sure?" } %>
+
+<% end %>
 
 
