--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <%= yield %>
 
     <div>
-      <%= link_to 'All Cocktails', cocktails_path %>
+      <%= link_to 'All Cocktails', cocktails_path %> | <%= link_to 'Create a cocktail', new_cocktail_path %>
     </div>
   </body>
 </html>
