--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,5 +1,7 @@
+<div class="form">
 <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.input :description %>
   <%= f.association :ingredient %>
   <%= f.submit "Create", class: 'btn btn-primary' %>
 <% end %>
+</div>
